fix(header-scroll): minimize street and header on mobile landscape

--- a/src/matrix/matrix.component.css
+++ b/src/matrix/matrix.component.css
@@ -56,6 +56,7 @@ matrix-images {
 .street-container .street-content,
 .street-container {
   position: relative;
+  width: 100%;
 }
 
 .street-container {
@@ -100,8 +101,7 @@ matrix-images {
   color: #767d86;
 }
 
-@media (max-width: 599px) {
-
+@media (max-width: 700px) {
   .street-container.fixed {
     position: fixed;
     z-index: 999;
